[chore] completed yarn 2 init

--- a/semcore/accordion/package.json
+++ b/semcore/accordion/package.json
@@ -13,10 +13,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.17",
     "@semcore/animation": "^1.2",
     "@semcore/flex-box": "^4",
-    "@semcore/icon": "^2.16"
+    "@semcore/icon": "^2.16",
+    "@semcore/utils": "^3.17"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
