--- a/semcore/notice-global/package.json
+++ b/semcore/notice-global/package.json
@@ -13,10 +13,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.24",
-    "@semcore/icon": "^2.16",
+    "@semcore/animation": "^1",
     "@semcore/flex-box": "^4",
-    "@semcore/animation": "^1"
+    "@semcore/icon": "^2.16",
+    "@semcore/utils": "^3.24"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
