--- a/semcore/spin-container/package.json
+++ b/semcore/spin-container/package.json
@@ -13,10 +13,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.31",
-    "@semcore/spin": "^4",
+    "@semcore/animation": "^1",
     "@semcore/flex-box": "^4",
-    "@semcore/animation": "^1"
+    "@semcore/spin": "^4",
+    "@semcore/utils": "^3.31"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
