--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,12 @@ semcore/illustration/**/*.js
 semcore/illustration/**/*.mjs
 !semcore/illustration/**/*.config.js
 semcore/illustration/**/*.d.ts
+
+# Yarn 2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
