--- a/semcore/button/package.json
+++ b/semcore/button/package.json
@@ -13,10 +13,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
-    "@semcore/spin": "^4",
+    "@semcore/flex-box": "^4",
     "@semcore/neighbor-location": "^2",
-    "@semcore/flex-box": "^4"
+    "@semcore/spin": "^4",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
