--- a/semcore/checkbox/package.json
+++ b/semcore/checkbox/package.json
@@ -13,9 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
+    "@semcore/flex-box": "^4",
     "@semcore/typography": "^4",
-    "@semcore/flex-box": "^4"
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
