--- a/semcore/drag-and-drop/package.json
+++ b/semcore/drag-and-drop/package.json
@@ -13,10 +13,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/flex-box": "^4",
-    "@semcore/utils": "^3.21",
     "@semcore/card": "^4.0.0",
-    "@semcore/grid": "^4.1.4"
+    "@semcore/flex-box": "^4",
+    "@semcore/grid": "^4.1.4",
+    "@semcore/utils": "^3.21"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
