--- a/semcore/feature-popover/package.json
+++ b/semcore/feature-popover/package.json
@@ -13,11 +13,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
+    "@semcore/animation": "^1",
     "@semcore/flex-box": "^4",
-    "@semcore/popper": "^4.2",
     "@semcore/icon": "^2.16",
-    "@semcore/animation": "^1"
+    "@semcore/popper": "^4.2",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
