--- a/semcore/flags/package.json
+++ b/semcore/flags/package.json
@@ -14,8 +14,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
-    "@semcore/flex-box": "^4"
+    "@semcore/flex-box": "^4",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
