--- a/semcore/format-text/package.json
+++ b/semcore/format-text/package.json
@@ -13,8 +13,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
-    "@semcore/flex-box": "^4.0.0"
+    "@semcore/flex-box": "^4.0.0",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
