--- a/semcore/fullscreen-modal/package.json
+++ b/semcore/fullscreen-modal/package.json
@@ -13,11 +13,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.21",
+    "@semcore/flex-box": "^4",
     "@semcore/icon": "^2.16",
     "@semcore/modal": "^3.0.1",
     "@semcore/typography": "^4",
-    "@semcore/flex-box": "^4"
+    "@semcore/utils": "^3.21"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
