--- a/semcore/icon/package.json
+++ b/semcore/icon/package.json
@@ -16,8 +16,8 @@
     "prebuild": "ls -d */ | egrep -v \"__tests__|src|svg|svg-new\" | xargs rm -rf"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
     "@semcore/flex-box": "^4",
+    "@semcore/utils": "^3.15",
     "classnames": "2.2.6"
   },
   "peerDependencies": {
@@ -33,7 +33,7 @@
     "directory": "semcore/icon"
   },
   "devDependencies": {
-    "@semcore/jest-preset-ui": "1.0.0",
-    "@semcore/icon-transform-svg": "1.0.0"
+    "@semcore/icon-transform-svg": "1.0.0",
+    "@semcore/jest-preset-ui": "1.0.0"
   }
 }
