--- a/semcore/inline-edit/package.json
+++ b/semcore/inline-edit/package.json
@@ -13,9 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@semcore/animation": "^1.5.0",
     "@semcore/flex-box": "^4",
-    "@semcore/utils": "^3.15",
-    "@semcore/animation": "^1.5.0"
+    "@semcore/utils": "^3.15"
   },
   "devDependencies": {
     "@semcore/jest-preset-ui": "1.0.0"
