--- a/semcore/notice/package.json
+++ b/semcore/notice/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@semcore/animation": "^1",
-    "@semcore/utils": "^3.15",
     "@semcore/flex-box": "^4",
     "@semcore/icon": "^2.16",
-    "@semcore/notice-global": "^1"
+    "@semcore/notice-global": "^1",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
