--- a/semcore/skeleton/package.json
+++ b/semcore/skeleton/package.json
@@ -13,8 +13,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.24",
-    "@semcore/flex-box": "^4"
+    "@semcore/flex-box": "^4",
+    "@semcore/utils": "^3.24"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
