--- a/semcore/switch/package.json
+++ b/semcore/switch/package.json
@@ -13,9 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.21",
     "@semcore/flex-box": "^4",
-    "@semcore/neighbor-location": "^2"
+    "@semcore/neighbor-location": "^2",
+    "@semcore/utils": "^3.21"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
