--- a/semcore/time-picker/package.json
+++ b/semcore/time-picker/package.json
@@ -13,11 +13,11 @@
     "test": "jest --no-cache"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
-    "@semcore/flex-box": "^4",
     "@semcore/button": "^4",
+    "@semcore/flex-box": "^4",
     "@semcore/input": "^3.0.0",
-    "@semcore/select": "^3.0.0"
+    "@semcore/select": "^3.0.0",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
