--- a/semcore/widget-empty/package.json
+++ b/semcore/widget-empty/package.json
@@ -14,8 +14,8 @@
     "upload-static": "gcs-upload svg/*.svg"
   },
   "dependencies": {
-    "@semcore/utils": "^3.27",
-    "@semcore/flex-box": "^4"
+    "@semcore/flex-box": "^4",
+    "@semcore/utils": "^3.27"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
