--- a/tools/icon-transform-svg/package.json
+++ b/tools/icon-transform-svg/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "bin": {
-    "icon-transform-svg": "./bin/index.js"
-  },
+  "bin": "./bin/index.js",
   "scripts": {
     "test": "jest"
   },
@@ -18,17 +16,16 @@
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.7.1",
     "@babel/preset-react": "7.7.0",
-    "jest": "^26.6.3",
-    "jest": "^26.6.3",
     "cheerio": "1.0.0-rc.3",
     "fs-extra": "8.1.0",
     "glob": "7.1.4",
     "html-to-react": "1.4.8",
+    "jest": "^26.6.3",
     "mri": "1.2.0"
   },
   "devDependencies": {
-    "babel-plugin-tester": "7.0.1",
     "@semcore/jest-preset-ui": "1.0.0",
+    "babel-plugin-tester": "7.0.1",
     "prettier": "2.6.2"
   },
   "jest": {
