--- a/tools/mailer/package.json
+++ b/tools/mailer/package.json
@@ -2,14 +2,12 @@
   "name": "@semcore/mailer",
   "version": "0.0.1",
   "main": "src/index.ts",
-  "private": false,
   "license": "MIT",
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "3.0.74",
+    "@semcore/changelog-handler": "0.0.1",
     "dayjs": "1.10.7",
     "dotenv": "16.0.0",
-    "tsm": "2.2.1",
-    "@semcore/changelog-handler": "0.0.1"
-  },
-  "devDependencies": {}
+    "tsm": "2.2.1"
+  }
 }
