--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -17,14 +17,16 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          yarn --non-interactive --frozen-lockfile
+          yarn -v
+          yarn --immutable --immutable-cache
           cd website
-          yarn --non-interactive --frozen-lockfile
+          yarn --immutable --immutable-cache
   build:
     runs-on: ubuntu-latest
     needs: setup
@@ -37,8 +39,9 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Cache build
         uses: actions/cache@v2
         id: cache-build
@@ -63,8 +66,9 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Restore cache build
         uses: actions/cache@v2
         with:
@@ -87,8 +91,9 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Restore cache build
         uses: actions/cache@v2
         with:
