--- a/.github/workflows/publish-components.yml
+++ b/.github/workflows/publish-components.yml
@@ -15,14 +15,15 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          yarn --non-interactive --frozen-lockfile
+          yarn --immutable --immutable-cache
           cd website
-          yarn --non-interactive --frozen-lockfile
+          yarn --immutable --immutable-cache
   publish-components:
     runs-on: ubuntu-latest
     needs: setup
@@ -38,8 +39,9 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Cache build
         uses: actions/cache@v2
         id: cache-build
