--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -16,11 +16,13 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
-        run: yarn --non-interactive --frozen-lockfile
+        run: |
+          yarn --immutable --immutable-cache
       - name: get release pull request name
         run: |
           echo "release_branch_name=${{ github.event.client_payload.pull_request.head.ref }}" >> $GITHUB_ENV
