--- a/.github/workflows/release-pull-request.yml
+++ b/.github/workflows/release-pull-request.yml
@@ -38,11 +38,13 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
-        run: yarn --non-interactive --frozen-lockfile
+        run: |
+          yarn --immutable --immutable-cache
       - name: generate release pull request name
         run: |
           currentSemcoreUiVersion="$(cat semcore/ui/package.json | jq -r .version)"
