--- a/.github/workflows/slack-updates-pre-broadcast.yml
+++ b/.github/workflows/slack-updates-pre-broadcast.yml
@@ -18,12 +18,13 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
-        run: yarn --non-interactive --frozen-lockfile
-
+        run: |
+          yarn --immutable --immutable-cache
   slack-updates-pre-broadcast:
     runs-on: ubuntu-latest
     needs: setup
@@ -36,8 +37,9 @@ jobs:
           path: |
             node_modules
             */*/node_modules
+            .yarn/cache
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Notification
         env:
           SLACK_API_ENDPOINTS: ${{ secrets.SLACK_WEBHOOK_URL_DEV }}
