--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
     "preinstall": "node ./.ci/update-workspaces-list",
     "publish:website": "tsm ./.ci/trigger-website-publish.ts",
-    "prepare": "husky install"
+    "postinstall": "husky install"
   },
   "private": true,
   "workspace-sources": {
