--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -18,7 +18,7 @@ COPY ./dist ./dist
 
 COPY ./server/package.json ./package.json
 COPY ./server/yarn.lock ./yarn.lock
-RUN yarn install --production --silent --non-interactive --frozen-lockfile
+RUN yarn install --production --silent --immutable --immutable-cache
 
 COPY ./dist /app/static
 
