--- a/website/cloudbuild.yaml
+++ b/website/cloudbuild.yaml
@@ -3,13 +3,13 @@ substitutions:
 steps:
   - name: node:16
     entrypoint: yarn
-    args: ['--non-interactive', '--frozen-lockfile']
+    args: ['--immutable']
   - name: node:16
     entrypoint: yarn
     args: ['build:icons']
   - name: node:16
     entrypoint: yarn
-    args: ['--non-interactive', '--frozen-lockfile', '--cwd', 'website']
+    args: ['--immutable', '--cwd', 'website']
   - name: node:16
     entrypoint: yarn
     args: ['build']
