--- a/.github/workflows/publish-components.yml
+++ b/.github/workflows/publish-components.yml
@@ -15,15 +15,14 @@ jobs:
           path: |
             node_modules
             */*/node_modules
-            .yarn/cache
             website/node_modules
           key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          yarn --immutable --immutable-cache
+          yarn --immutable 
           cd website
-          yarn --immutable --immutable-cache
+          yarn --immutable
   publish-components:
     runs-on: ubuntu-latest
     needs: setup
@@ -39,7 +38,6 @@ jobs:
           path: |
             node_modules
             */*/node_modules
-            .yarn/cache
             website/node_modules
           key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Cache build
