--- a/.github/workflows/slack-updates-broadcast.yml
+++ b/.github/workflows/slack-updates-broadcast.yml
@@ -18,13 +18,12 @@ jobs:
           path: |
             node_modules
             */*/node_modules
-            .yarn/cache
             website/node_modules
           key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          yarn --immutable --immutable-cache
+          yarn --immutable
   broadcast:
     runs-on: ubuntu-latest
     needs: setup
@@ -37,7 +36,6 @@ jobs:
           path: |
             node_modules
             */*/node_modules
-            .yarn/cache
             website/node_modules
           key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-berry-${{ hashFiles('website/yarn.lock') }}
       - name: Notification
