--- a/website/package.json
+++ b/website/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "MIT",
   "type": "module",
+  "private": true,
   "scripts": {
     "start": "yarn dev",
     "dev": "yarn build:ensure-icons && WATCH_TYPES=true tsm ./builder/dev-server.ts",
@@ -66,8 +67,5 @@
     "tsm": "2.2.1",
     "typescript": "4.1.3",
     "unified": "10.1.2"
-  },
-  "resolutions": {
-    "esbuild-plugin-css-modules/rm/mocha/yargs/cliui/strip-ansi/ansi-regex": "5.0.1"
   }
 }
