[chore] updated resolutions field to be compatible with pnpm overrides syntax
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/website/package.json
+++ b/website/package.json
@@ -69,6 +69,6 @@
     "unified": "10.1.2"
   },
   "resolutions": {
-    "esbuild-plugin-css-modules/rm/mocha/yargs/cliui/strip-ansi/ansi-regex": "5.0.1"
+    "ansi-regex": "5.0.1"
   }
 }
