--- a/package.json
+++ b/package.json
@@ -176,13 +176,13 @@
     "tools/super-publisher"
   ],
   "resolutions": {
-    "@types/react/csstype": "3.0.8",
-    "**/**/minimist": "1.2.6",
-    "**/**/semver-regex": "3.1.3",
-    "**/**/nth-check": "2.0.1",
-    "**/**/trim-newlines": "3.0.1",
-    "**/**/glob-parent": "6.0.2",
-    "**/**/braces": "3.0.2",
-    "**/**/@babel/runtime": "7.17.9"
+    "csstype": "3.0.8",
+    "minimist": "1.2.6",
+    "semver-regex": "3.1.3",
+    "nth-check": "2.0.1",
+    "trim-newlines": "3.0.1",
+    "glob-parent": "6.0.2",
+    "braces": "3.0.2",
+    "@babel/runtime": "7.17.9"
   }
 }
