--- a/tools/babel-plugin-react-semcore/package.json
+++ b/tools/babel-plugin-react-semcore/package.json
@@ -10,8 +10,10 @@
     "@semcore/babel-plugin-shadow": "^1.2",
     "@semcore/babel-plugin-styles": "^1.2",
     "css-purge": "3.1.8",
+    "find-package-json": "1.2.0",
     "semver": "7.3.5",
-    "string-hash": "1.1.3"
+    "string-hash": "1.1.3",
+    "string.prototype.replaceall": "1.0.6"
   },
   "devDependencies": {
     "babel-plugin-tester": "8.0.1",
