[chore] adopted pnpm workspaces
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "packageManager": "pnpm@7.0.0",
   "scripts": {
     "start": "pnpm playground",
-    "build": "pnpm build:icons && pnpm build:illustration && lerna run build --scope @semcore/* --ignore @semcore/icon,@semcore/ui",
-    "build:icons": "pnpm workspace @semcore/icon build",
+    "build": "pnpm build:icons && pnpm build:illustration && pnpm --filter @semcore/* --filter !@semcore/icon --filter !@semcore/ui run build",
+    "build:icons": "pnpm --filter @semcore/icon run build",
     "build:illustration": "pnpm workspace @semcore/illustration build",
-    "typecheck": "lerna exec --scope @semcore/* -- tsc --noEmit",
+    "typecheck": "pnpm --filter @semcore/* --filter !@semcore/babel-plugin-root --filter !@semcore/babel-plugin-shadow --filter !@semcore/babel-plugin-styles --filter !@semcore/babel-plugin-react-semcore --filter !@semcore/babel-preset-ui --filter !@semcore/jest-preset-ui --filter !@semcore/babel-plugin-recharts --filter !@semcore/email --filter !@semcore/dep-checker --filter !@semcore/code-mod --filter !@semcore/icon-transform-svg --filter !@semcore/shadow-loader --filter !@semcore/generator-component exec tsc --noEmit",
     "prebuild": "rm -rf semcore/**/lib && pnpm prebuild:icon && pnpm prebuild:illustration",
-    "prebuild:icon": "pnpm workspace @semcore/icon prebuild",
-    "prebuild:illustration": "pnpm workspace @semcore/illustration prebuild",
+    "prebuild:icon": "pnpm --filter @semcore/icon run prebuild",
+    "prebuild:illustration": "pnpm --filter @semcore/illustration run prebuild",
     "test": "jest --no-cache",
     "vo-test:setup": "npx @guidepup/setup",
     "vo-test": "playwright test",
-    "playground": "pnpm workspace @semcore/playground start",
-    "website": "pnpm --cwd website start",
+    "playground": "pnpm --filter @semcore/playground run start",
+    "website": "pnpm --dir website start",
     "coverage": "jest --no-cache --coverage",
     "pub": "super-publisher --root ./semcore",
     "lint:es": "eslint -c .eslintrc --ext .ts,.tsx,.js,.jsx ./semcore",
@@ -28,14 +28,6 @@
     "i18n:download": "yarn crowdin download && tsm --require=./.ci/tsm-filter-warnings.js .ci/i18n-csv-2-json.ts"
   },
   "private": true,
-  "workspace-sources": {
-    "@semcore/*": [
-      "semcore/*/src"
-    ],
-    "@semcore/utils/lib/*": [
-      "semcore/utils/src/*"
-    ]
-  },
   "devDependencies": {
     "@crowdin/cli": "3.7.9",
     "@guidepup/playwright": "0.6.1",
@@ -78,103 +70,6 @@
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "eslint --fix"
   },
-  "workspaces": [
-    "semcore/accordion",
-    "semcore/animation",
-    "semcore/badge",
-    "semcore/base-trigger",
-    "semcore/breadcrumbs",
-    "semcore/breakpoints",
-    "semcore/button",
-    "semcore/card",
-    "semcore/carousel",
-    "semcore/chart",
-    "semcore/checkbox",
-    "semcore/color-picker",
-    "semcore/core",
-    "semcore/counter",
-    "semcore/d3-chart",
-    "semcore/data-table",
-    "semcore/date-picker",
-    "semcore/divider",
-    "semcore/dot",
-    "semcore/drag-and-drop",
-    "semcore/dropdown",
-    "semcore/dropdown-menu",
-    "semcore/email",
-    "semcore/errors",
-    "semcore/feature-popover",
-    "semcore/feedback-form",
-    "semcore/flags",
-    "semcore/flex-box",
-    "semcore/format-text",
-    "semcore/fullscreen-modal",
-    "semcore/grid",
-    "semcore/icon",
-    "semcore/illustration",
-    "semcore/inline-edit",
-    "semcore/inline-input",
-    "semcore/input",
-    "semcore/input-mask",
-    "semcore/input-number",
-    "semcore/input-tags",
-    "semcore/link",
-    "semcore/modal",
-    "semcore/neighbor-location",
-    "semcore/notice",
-    "semcore/notice-bubble",
-    "semcore/notice-global",
-    "semcore/outside-click",
-    "semcore/pagination",
-    "semcore/pills",
-    "semcore/popper",
-    "semcore/portal",
-    "semcore/product-head",
-    "semcore/progress-bar",
-    "semcore/project-create",
-    "semcore/radio",
-    "semcore/scroll-area",
-    "semcore/select",
-    "semcore/side-panel",
-    "semcore/skeleton",
-    "semcore/slider",
-    "semcore/spin",
-    "semcore/spin-container",
-    "semcore/sticky",
-    "semcore/switch",
-    "semcore/tab-line",
-    "semcore/tab-panel",
-    "semcore/table",
-    "semcore/tag",
-    "semcore/textarea",
-    "semcore/time-picker",
-    "semcore/tooltip",
-    "semcore/typography",
-    "semcore/utils",
-    "semcore/widget-empty",
-    "semcore/wizard",
-    "tools/babel-plugin-react-semcore",
-    "tools/babel-plugin-recharts",
-    "tools/babel-plugin-root",
-    "tools/babel-plugin-styles",
-    "tools/babel-preset-ui",
-    "tools/builder",
-    "tools/changelog-handler",
-    "tools/code-mod",
-    "tools/continuous-delivery",
-    "tools/dep-checker",
-    "tools/esbuild-plugin-semcore",
-    "tools/flags-sprite",
-    "tools/gcs-upload",
-    "tools/generator-component",
-    "tools/icon-transform-svg",
-    "tools/jest-preset-ui",
-    "tools/mailer",
-    "tools/playground",
-    "tools/shadow-loader",
-    "tools/slack-integration",
-    "tools/super-publisher"
-  ],
   "resolutions": {
     "csstype": "3.0.8",
     "minimist": "1.2.6",
