--- a/tools/playground/package.json
+++ b/tools/playground/package.json
@@ -15,11 +15,12 @@
     "@semcore/esbuild-plugin-semcore": "*",
     "@types/node": "^17.0.23",
     "esbuild": "0.14.29",
-    "file-loader": "4.0.0",
+    "fast-glob": "3.2.11",
     "fps-emitter": "1.0.0",
     "picocolors": "1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-is": "17.0.1",
     "styled-components": "5.3.5",
     "tsm": "2.2.2"
   },
@@ -27,7 +28,11 @@
     "@semcore/core": "*",
     "@semcore/errors": "*",
     "@semcore/icon": "*",
-    "@semcore/jest-preset-ui": "*",
+    "@semcore/jest-preset-ui": "1.0.0",
+    "@types/react-dom": "17.0.1",
+    "@types/jest": "27.4.1",
+    "@types/node": "^17.0.45",
+    "@types/react": "17.0.1",
     "babel-plugin-tester": "7.0.1",
     "fast-glob": "3.2.11",
     "jest": "29.0.1"
