--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "yarn lint:ts && yarn lint:es",
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
     "preinstall": "node ./.ci/update-workspaces-list",
-    "publish:website": "tsm ./.ci/trigger-website-publish.ts",
+    "publish:website": "tsm --require=./.ci/tsm-filter-warnings.js ./.ci/trigger-website-publish.ts",
     "prepare": "husky install"
   },
   "private": true,
@@ -55,7 +55,7 @@
     "picocolors": "1.0.0",
     "prettier": "2.6.2",
     "pretty-quick": "1.11.1",
-    "tsm": "2.2.1",
+    "tsm": "2.2.2",
     "typescript": "4.5.5",
     "typescript-plugin-css-modules": "2.2.0",
     "typescript-workspace-plugin": "2.0.1"
