--- a/semcore/icon/package.json
+++ b/semcore/icon/package.json
@@ -13,7 +13,7 @@
     "transform": "icon-transform-svg",
     "build": "build --source=js && npm run transform -- --configFile=transform-svg-legacy.config.js && npm run transform -- --configFile=transform-svg.config.js",
     "test": "jest",
-    "prebuild": "ls -d */ | egrep -v \"__tests__|src|svg|svg-new\" | xargs rm -rf"
+    "prebuild": "ls -d */ | egrep -v \"__tests__|src|svg|svg-new|AppBlock\" | xargs rm -rf"
   },
   "dependencies": {
     "@semcore/utils": "^3.15",
