[d3-chart] refactored summarizer to fully follow philosophy of hints optionnality (especially for value sets and gropped values data)

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "preinstall": "node ./.ci/update-workspaces-list",
     "publish:website": "tsm --require=./.ci/tsm-filter-warnings.js ./.ci/trigger-website-publish.ts",
     "prepare": "husky install",
-    "i18n:submit": "crowdin upload",
-    "i18n:status": "crowdin status",
-    "i18n:download": "crowdin download"
+    "i18n:submit": "yarn crowdin upload",
+    "i18n:status": "yarn crowdin status",
+    "i18n:download": "yarn crowdin download"
   },
   "private": true,
   "workspace-sources": {
