--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "yarn playground",
     "build": "yarn build:icons && lerna run build --scope @semcore/* --ignore @semcore/icon,@semcore/ui",
-    "build:icons": "lerna run build --scope @semcore/icon",
+    "build:icons": "yarn workspace @semcore/icon build",
     "typecheck": "lerna exec --scope @semcore/* -- tsc --noEmit",
     "prebuild": "rm -rf semcore/**/lib && yarn prebuild:icon && yarn prebuild:illustration",
     "prebuild:icon": "yarn workspace @semcore/icon prebuild",
