[website] Change order flag cwd for yarn command
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -11,8 +11,8 @@ COPY ./ ./
 
 RUN yarn install --silent --non-interactive --frozen-lockfile
 RUN yarn build:icons
-RUN yarn install --silent --non-interactive --frozen-lockfile --cwd website
-RUN yarn build --cwd website
+RUN yarn --cwd website install --silent --non-interactive --frozen-lockfile
+RUN yarn --cwd website build
 
 FROM nginx:alpine
 
