--- a/semcore/d3-chart/package.json
+++ b/semcore/d3-chart/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@semcore/d3-chart",
   "description": "SEMRush D3 Chart Component",
-  "version": "2.2.4",
+  "version": "2.3.0-beta.0",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
   "typings": "lib/types/index.d.ts",
