--- a/tools/babel-preset-ui/package.json
+++ b/tools/babel-preset-ui/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "7.12.1",
     "@babel/preset-typescript": "7.12.0",
     "@semcore/babel-plugin-shadow": "*",
+    "@semcore/babel-plugin-root": "*",
     "babel-plugin-preval": "3.0.1"
   }
 }
