[website] Change machine type for build
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/cloudbuild.yaml
+++ b/website/cloudbuild.yaml
@@ -28,4 +28,4 @@ images:
   - $_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
 timeout: 3600s
 options:
-  machineType: 'N1_HIGHCPU_8'
+  machineType: E2_HIGHCPU_8
