--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -16,34 +16,9 @@ http {
 
         root /app/static;
 
-        location /secret1/g-cloud-file {
-          proxy_pass https://static.semrush.com/ui-kit/intergalactic-documentation/0.1.6/static/valid-invalid-2ZRVGMI4.png;
-        }
-        location /intergalactic/secret2/g-cloud-file {
-          proxy_pass https://static.semrush.com/ui-kit/intergalactic-documentation/0.1.6/static/valid-invalid-2ZRVGMI4.png;
-        }
-
-        # ngninx doesn't support multiple conditions in if statement 
-        set $needs_redirect "";
-        if ($http_host = 'i.semrush.com') {
-          set $needs_redirect "true";
-        }
-        if ($request_uri !~ "g-cloud-file") {
-          set $needs_redirect "$needs_redirect-true";
-        }
-        if ($needs_redirect = 'true-true') {
-          return 301    https://developer.semrush.com/intergalactic$request_uri;
-        }
-
-        location /api/ {
-          proxy_pass  http://localhost:3001/;
-        }
-        location /intergalactic/api/ {
-          proxy_pass  http://localhost:3001/;
-        }
-        location / {
-          rewrite /intergalactic/(.*) /$1  break;
-        }
+#         location / {
+#           rewrite /intergalactic/(.*) /$1  break;
+#         }
 
         error_page 404 /not-found/index.html;
     }
