[website] Change container registry to artifactory registry
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/cloudbuild.yaml
+++ b/website/cloudbuild.yaml
@@ -1,6 +1,6 @@
 substitutions:
   _SERVICE_NAME: intergalactic
-  _GCR_HOSTNAME: us.gcr.io
+  _GCR_HOSTNAME: us-east4-docker.pkg.dev
 
 steps:
   - id: 'Build docker'
