[website] Revert location
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -16,9 +16,9 @@ http {
 
         root /app/static;
 
-#         location / {
-#           rewrite /intergalactic/(.*) /$1  break;
-#         }
+        location / {
+          rewrite /intergalactic/(.*) /$1  break;
+        }
 
         error_page 404 /not-found/index.html;
     }
