--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -8,6 +8,8 @@ http {
         listen 8080;
         listen [::]:8080;
 
+        gzip on;
+
         resolver 127.0.0.11;
         autoindex off;
 
