[website] Change gzip type
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -9,6 +9,8 @@ http {
         listen [::]:8080;
 
         gzip on;
+        gzip_vary on;
+        gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
 
         resolver 127.0.0.11;
         autoindex off;
