--- a/semcore/color-picker/package.json
+++ b/semcore/color-picker/package.json
@@ -25,6 +25,9 @@
     "@semcore/core": "^1.8.3",
     "react": "16.8 - 17"
   },
+  "devDependencies": {
+    "@semcore/jest-preset-ui": "1.0.0"
+  },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
   }
