--- a/tools/builder/package.json
+++ b/tools/builder/package.json
@@ -10,6 +10,7 @@
     "@babel/cli": "7.8.4",
     "@babel/core": "7.8.7",
     "@semcore/babel-preset-ui": "*",
+    "babel-plugin-replace-import-extension": "1.1.3",
     "execa": "5.0.0",
     "fs-extra": "8.1.0",
     "mri": "1.2.0",
